# immunology-101

./: .gitignore  LICENSE  README.md  pyproject.toml
immunology101/: __init__.py  ai.py  app.py  cli.py  grader.py  loader.py  models.py  progress.py  prompts.py  renderer.py
immunology101/content/: course.yaml
immunology101/content/01_cells_of_immunity/: exercises.yaml  lesson.md  references.yaml
immunology101/content/02_innate_immunity/: exercises.yaml  lesson.md  references.yaml
immunology101/content/03_antibodies/: exercises.yaml  lesson.md  references.yaml
immunology101/content/04_t_cells/: exercises.yaml  lesson.md  references.yaml
immunology101/content/05_cytokines/: exercises.yaml  lesson.md  references.yaml
immunology101/content/06_tolerance_autoimmunity/: exercises.yaml  lesson.md  references.yaml
immunology101/content/07_memory_vaccination/: exercises.yaml  lesson.md  references.yaml
immunology101/content/08_tumour_immunology/: exercises.yaml  lesson.md  references.yaml
immunology101/content/09_infectious_disease/: exercises.yaml  lesson.md  references.yaml
immunology101/content/10_computational_immunology/: exercises.yaml  lesson.md  references.yaml
tests/: conftest.py  test_cli.py  test_grader.py  test_loader.py  test_models.py  test_progress.py
